--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ЗвукАвто — Автозвук высшего класса</title>
+    <title>АТ студия — Автозвук и установка высшего класса</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>🔊 ЗвукАвто</h1>
+            <h1>🔊 АТ студия</h1>
             <nav>
                 <a href="index.html">Главная</a>
                 <a href="catalog.html">Каталог</a>
@@ -23,7 +23,7 @@
         <section class="hero">
             <div class="container">
                 <h2>Чистый звук в твою машину</h2>
-                <p>Лучшие колонки, усилители и сабвуферы по выгодным ценам</p>
+                <p>Лучшие динамики, усилители и сабвуферы по выгодным ценам</p>
                 <a href="catalog.html" class="btn">Смотреть каталог</a>
             </div>
         </section>
@@ -55,8 +55,8 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2025 ЗвукАвто — Автозвук с доставкой по России</p>
-            <p>Телефон: <a href="tel:+79001234567">+7 (900) 123-45-67</a></p>
+            <p>&copy; 2025 АТ студия — Автозвук с доставкой по России</p>
+            <p>Телефон: <a href="tel:+79179449818">+7 (917) 944-98-18</a></p>
         </div>
     </footer>
 
